# initialize ArduinoJson
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/ArduinoJson)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/BME280)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/PicoPioPWM)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/PicoPWM)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/PicoStepper)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/PicoServo)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/Welfords)